<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/arrowBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xxs"
        android:layout_marginTop="@dimen/margin_20_dp"
        android:contentDescription="@string/back_button_content_description"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contactDetailsTextView"
        style="@style/Text.Title1.Primary.Dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_14_dp"
        android:text="@string/detalii_contact"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/arrowBackButton"
        app:layout_constraintStart_toEndOf="@id/arrowBackButton"
        app:layout_constraintTop_toTopOf="@id/arrowBackButton" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profileImageCircleBackground"
        android:layout_width="@dimen/profile_image_size"
        android:layout_height="@dimen/profile_image_size"
        android:layout_marginTop="@dimen/margin_m_l"
        app:cardBackgroundColor="@color/image_grey_background"
        app:cardCornerRadius="@dimen/profile_image_radius"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactDetailsTextView">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile_image_content_description" />

        <TextView
            android:id="@+id/profileInitialsTextView"
            style="@style/Text.Body2.Primary.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/contactNameTextView"
        style="@style/Text.Body2.Primary.Dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_s_m"
        android:text="@string/name_mock"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileImageCircleBackground" />

    <TextView
        android:id="@+id/emailTextView"
        style="@style/Text.Body2.Primary.Grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_s"
        android:text="@string/email_mock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactNameTextView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/postLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailTextView"
        android:layout_marginTop="@dimen/margin_m_l"
        android:background="@color/grey">

        <TextView
            android:id="@+id/postTitle"
            style="@style/Text.Body2.Primary.Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_m"
            android:layout_marginTop="@dimen/margin_m"
            android:layout_marginEnd="@dimen/margin_m"
            android:ellipsize="end"
            android:maxLines="1"
            android:textStyle="bold"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/postDescription"
            style="@style/Text.Body2.Primary.Grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_m"
            android:layout_marginTop="@dimen/margin_xs"
            android:layout_marginEnd="@dimen/margin_m"
            android:layout_marginBottom="@dimen/margin_m"
            android:ellipsize="end"
            android:maxLines="2"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/postTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>