<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/profileImageCircleBackground"
                android:layout_width="@dimen/profile_image_size"
                android:layout_height="@dimen/profile_image_size"
                android:layout_marginStart="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_m"
                android:layout_marginBottom="@dimen/margin_m"
                app:cardBackgroundColor="@color/image_grey_background"
                app:cardCornerRadius="@dimen/profile_image_radius"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profileImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/profile_image_content_description" />

                <TextView
                    android:id="@+id/profileInitialsTextView"
                    style="@style/Text.Body2.Primary.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/contactNameTextView"
                style="@style/Text.Body2.Primary.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_s_m"
                android:text="@string/name_mock"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="@id/profileImageCircleBackground"
                app:layout_constraintEnd_toStartOf="@id/arrowForward"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/profileImageCircleBackground"
                app:layout_constraintTop_toTopOf="@id/profileImageCircleBackground" />

            <ImageView
                android:id="@+id/arrowForward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:contentDescription="@string/forward_button_content_description"
                android:src="@drawable/arrow_forward"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>